<resources>
    <string name="app_name">搜查查</string>

    <string name="test_string">测试文字</string>

    <string name="movie">电影资讯</string>
    <string name="train">火车票</string>
    <string name="express">查快递</string>
    <string name="translation">查单词</string>
    <string name="weather">查天气</string>

    <string name="home_head_title">点击头像进行登录</string>
    <string name="splash_jump">%s 跳过</string>
    <string name="copy_right">CopyRight © 2018-%s Hello-ToT.</string>
    <string name="all_right">All Rights Reserved.</string>

    <string name="permission_denied">你拒绝了权限！程序无法正常运行！</string>
</resources>
