<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_movie"
            android:icon="@drawable/ic_movie"
            android:title="@string/movie" />
        <item
            android:id="@+id/item_train"
            android:icon="@drawable/ic_train"
            android:title="@string/train" />
        <item
            android:id="@+id/item_express"
            android:icon="@drawable/ic_express"
            android:title="@string/express" />
        <item
            android:id="@+id/item_translation"
            android:icon="@drawable/ic_translation"
            android:title="@string/translation" />
        <item
            android:id="@+id/item_weather"
            android:icon="@drawable/ic_weather"
            android:title="@string/weather" />
    </group>
</menu>